--- a/list.html
+++ b/list.html
@@ -6,8 +6,8 @@
     <title>List</title>
 </head>
 <body>
-    <header><h1>Frequently asked Questions</h1></header>
-    <br>
+    <!-- <header><h1>Frequently asked Questions</h1></header>
+    <br> -->
     <!-- <h3>List of available courses</h3>
     <ul>
         <li>data structure </li>
