--- a/lab manual/Experiment 4 .html
+++ b/lab manual/Experiment 4 .html
@@ -6,7 +6,7 @@
     <title>HOTEL booking </title>
 </head>
 <body>
-    <h2 align="centre" >Hotel Room Booking Form</h2>
+    <h2 >Hotel Room Booking Form</h2>
     <form action=""Full Name ></form>
         <label for="name">Full Name:</label>
         <input type="text" placeholder="Enter your Name:">
