--- a/selector.html
+++ b/selector.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS selector</title>
+    <title>www.eklavya.com</title>
+    <style>
+        a {
+            color: white;
+            padding: 10px 15px;
+           text-decoration: none;
+            margin: 5px;
+            border-radius: 4px;
+            text-align: center;
+        }
+        
+    </style>
 </head>
 <body>
-    <h1 >Hello World</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt iusto aliquam ullam provident quibusdam magni porro reprehenderit molestiae asperiores nisi. Voluptas quibusdam deserunt minima. Veniam quae quisquam perferendis impedit eligendi!</p>
-   <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, earum facilis tempore molestias necessitatibus commodi ipsum vitae quaerat voluptatem sequi nostrum inventore neque vero. Qui saepe numquam totam distinctio. Distinctio.</p>
+    <h1 style="color:blue;" align="center">RANA OVERSEAS </h1>
+    <h2 align="center">A GATEWAY OF KNOWLWDGE</h2>
+   <img src="https://images.unsplash.com/photo-1607853554439-0069ec0f29b6?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Ym13fGVufDB8fDB8fHww&fm=jpg&q=60&w=3000" alt="Rolls Royce Phantom" width="100%" height="1000" align="center">
+    <hr>
+     
+    <a href="www.facebook.com" target="_blank" style="background-color: red;">HOME</a>
+    <a href="www.twitter.com" target="_blank" style="background-color: blue;">SERVICES</a>
+    <a href="www.linkedin.com" target="_blank" style="background-color: green;">SUPPORT</a>
+    <a href="www.youtube.com" target="_blank" style="background-color: orange;">ABOUT US</a>
+    <a href="www.instagram.com" target="_blank" style="background-color: rgb(18, 172, 54);">CONTACT</a>
+    <a href="www.whatsapp.com" target="_blank" style="background-color: rgb(235, 231, 233);">SEARCH</a>
+
+    <br>
+<br>
+<img src="https://erp.abes.ac.in/OnlineEnquiry/Images/ABESEngineer.jpeg" alt="RANA OVERSEAS" width="80%" height="300" align="center">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo veritatis, dignissimos, expedita hic fugiat asperiores inventore voluptates eveniet omnis molestias enim eaque sed architecto esse quae eius commodi magni iure!</p>
 
 </body>
 </html>
